# pos

./: .gitignore  .gitlab-ci.yml  .gitmodules  Dockerfile  Dockerfile.cmd  README.md  build.conf  build_rootfs.sh  dautorun.sh  dbuild.sh  dcp.sh  deploy.sh  drun.sh  st  sts  update.sh
avz/: build.sh
buildroot/package/: Config.in
filesystem/: create_img.sh  mount.sh  umount.sh
linux/: .gitignore
linux/linux/: Makefile
linux/linux/arch/arm/: Kconfig
linux/linux/arch/arm64/: Makefile
linux/linux/drivers/clk/: Makefile
linux/usr/: Makefile  deploy.sh
linux/usr/module/: Makefile  accel.c  access.c  rpisense.c  sysfs_uevent.c
linux/usr/src/: Makefile  accel.h  accel_led.c  accel_reader.c  event_reader.c  simon.c  vextctl.c
qemu/: README.pos
qemu/hw/arm/: Kconfig  meson.build  virt.c
rootfs.src/: Makefile  deploy.sh  mount_initrd.sh  mount_rootfs.sh  umount_initrd.sh  umount_ramfs.sh  umount_rootfs.sh
rootfs.src/board/virt32/: initrd.cpio
rootfs.src/config/: virt32_defconfig
sense-hat/: README.md  sense-hat-server.py
sense-hat/python-sense-emu/sense_emu/: sense_hat.py
so3/so3/: Makefile
so3/so3/configs/: rpi4_defconfig  virt32_defconfig  virt64_avz_pv_defconfig
so3/so3/devices/: Kconfig  Makefile  rpisense_dummy.c  strdev.c  vext.c
so3/so3/dts/: Makefile  rpi4.dts  virt32.dts
so3/so3/include/: initcall.h
so3/so3/kernel/: main.c
so3/usr/: build.sh  deploy.sh
so3/usr/src/: CMakeLists.txt  addr.c  count.c  event_reader.c  simon.c  vextctl.c
u-boot/: Makefile
u-boot/cmd/: Makefile  hello.c
u-boot/configs/: rpi_4_32b_defconfig
(+47 files in other folders)
